--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="project">
                 <h3 class="projectTitle">Project #1</h3>
                 <a class="projectLink" href="https://github.com/S-Gsell/PagesWorkshop" target="_blank">
-                    <img class="projectImage" src="./images/background.jpg" alt="Project #1"/>
+                    <img class="projectImage" src="./images/java.jpg" alt="Project #1"/>
                 </a>
                 <p class="projectDescription">
                     This is my sooper cool project! Let me tell you all about 
@@ -122,7 +122,7 @@
             <div class="project">
                 <h3 class="projectTitle">Project #2</h3>
                 <a class="projectLink" href="https://github.com/S-Gsell/PagesWorkshop" target="_blank">
-                    <img class="projectImage" src="./images/background.jpg" alt="Project #2"/>
+                    <img class="projectImage" src="./images/computer.jpg" alt="Project #2"/>
                 </a>
                 <p class="projectDescription">
                     This is my sooper cool project! Let me tell you all about 
@@ -133,7 +133,7 @@
             <div class="project">
                 <h3 class="projectTitle">Project #3</h3>
                 <a class="projectLink" href="https://github.com/S-Gsell/PagesWorkshop" target="_blank">
-                    <img class="projectImage" src="./images/background.jpg" alt="Project #3"/>
+                    <img class="projectImage" src="./images/project3.jpg" alt="Project #3"/>
                 </a>
                 <p class="projectDescription">
                     This is my sooper cool project! Let me tell you all about 
